api-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: altas-api
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas
  template:
    metadata:
      labels:
        app: atlas
    spec:
      containers:
      - name: altas-api
        image: amb0u/atlas-api:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1.5"
            memory: "2Gi"
          requests:
            cpu: "1.5"
            memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name:  altas-api
  namespace: dev
spec:
  selector:
    app: atlas
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: altas-api
  namespace: dev
spec:
  rules:
  - host: "new-api.atlascmms.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: altas-api
            port:
              number: 8080
